[gd_scene load_steps=81 format=2]

[ext_resource path="res://Scripts/MageGolem.gd" type="Script" id=1]
[ext_resource path="res://Sounds/ImportedSounds/JumpSounds/007_meow.wav" type="AudioStream" id=2]
[ext_resource path="res://Battlemage Fantasy Character/NecromancerSprites/Golem/Earth Elemental (56x56).test1.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=58]
radius = 12.0
height = 8.0

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 3 )
region = Rect2( 0, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 3 )
region = Rect2( 56, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 3 )
region = Rect2( 112, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 3 )
region = Rect2( 168, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 3 )
region = Rect2( 224, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 3 )
region = Rect2( 280, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 3 )
region = Rect2( 336, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 3 )
region = Rect2( 392, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 3 )
region = Rect2( 448, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 3 )
region = Rect2( 504, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 3 )
region = Rect2( 560, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 3 )
region = Rect2( 616, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 3 )
region = Rect2( 0, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 3 )
region = Rect2( 56, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 3 )
region = Rect2( 112, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 3 )
region = Rect2( 168, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 3 )
region = Rect2( 224, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 3 )
region = Rect2( 280, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 3 )
region = Rect2( 336, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 3 )
region = Rect2( 392, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 3 )
region = Rect2( 448, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 3 )
region = Rect2( 504, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 3 )
region = Rect2( 560, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 3 )
region = Rect2( 616, 168, 56, 56 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 3 )
region = Rect2( 0, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 3 )
region = Rect2( 56, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 3 )
region = Rect2( 112, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 3 )
region = Rect2( 168, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 3 )
region = Rect2( 224, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 3 )
region = Rect2( 280, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 3 )
region = Rect2( 336, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 3 )
region = Rect2( 392, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 3 )
region = Rect2( 448, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 3 )
region = Rect2( 504, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 3 )
region = Rect2( 560, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 3 )
region = Rect2( 0, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 3 )
region = Rect2( 56, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 3 )
region = Rect2( 112, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 3 )
region = Rect2( 168, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 3 )
region = Rect2( 224, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 3 )
region = Rect2( 280, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 3 )
region = Rect2( 336, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 3 )
region = Rect2( 392, 280, 56, 56 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 3 )
region = Rect2( 0, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 3 )
region = Rect2( 56, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 3 )
region = Rect2( 112, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 3 )
region = Rect2( 168, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 3 )
region = Rect2( 224, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 3 )
region = Rect2( 280, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 3 )
region = Rect2( 336, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 3 )
region = Rect2( 392, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 3 )
region = Rect2( 448, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 3 )
region = Rect2( 504, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 3 )
region = Rect2( 560, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 3 )
region = Rect2( 616, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 3 )
region = Rect2( 672, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 3 )
region = Rect2( 728, 224, 56, 56 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 56, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 168, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 280, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 3 )
region = Rect2( 0, 56, 56, 56 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 3 )
region = Rect2( 56, 56, 56, 56 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 3 )
region = Rect2( 112, 56, 56, 56 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 3 )
region = Rect2( 168, 56, 56, 56 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 3 )
region = Rect2( 224, 56, 56, 56 )

[sub_resource type="SpriteFrames" id=57]
animations = [ {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": false,
"name": "Angry",
"speed": 20.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ) ],
"loop": false,
"name": "Attack1",
"speed": 20.0
}, {
"frames": [ SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ) ],
"loop": false,
"name": "Attack2",
"speed": 5.0
}, {
"frames": [ SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=59]
radius = 300.0

[sub_resource type="CircleShape2D" id=60]
radius = 153.0

[sub_resource type="RectangleShape2D" id=111]
extents = Vector2( 200, 50 )

[sub_resource type="RectangleShape2D" id=62]
resource_local_to_scene = true
extents = Vector2( 4.85, 10 )

[sub_resource type="Animation" id=63]
resource_name = "Attack1"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attack1Area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=110]
resource_name = "Attack2"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_add_ksanteq"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.6, 0, 2, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=134]
resource_name = "Die"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack1Area/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[node name="KinematicBody2D" type="KinematicBody2D" groups=["MageGolem"]]
collision_layer = 256
collision_mask = 2064
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2, 3 )
shape = SubResource( 58 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1.075, 0.875, 1.125, 1 )
frames = SubResource( 57 )
animation = "Attack2"
frame = 7
playing = true

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
modulate = Color( 0.0117647, 0.333333, 0.32549, 1 )
position = Vector2( -1, 0 )
shape = SubResource( 59 )

[node name="PlayerNearArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNearArea"]
shape = SubResource( 60 )

[node name="EnemyDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.72549, 0.792157, 0.109804, 1 )
shape = SubResource( 111 )

[node name="HitWallTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 10 )
rotation = -1.5708
enabled = true
cast_to = Vector2( -1.09278e-06, 25 )
collision_mask = 16
collide_with_areas = true

[node name="EnemyInRangeForAttack" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyInRangeForAttack"]
position = Vector2( 12, 0 )
rotation = 3.14159
scale = Vector2( 2.5, 1 )
z_as_relative = false
shape = SubResource( 62 )

[node name="Attack1Area" type="Area2D" parent="." groups=["GolemAttack"]]
visible = false
collision_layer = 128
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack1Area"]
modulate = Color( 0.866667, 0.0627451, 0.364706, 1 )
position = Vector2( 12, 0 )
scale = Vector2( 2.5, 1 )
shape = SubResource( 62 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack1 = SubResource( 63 )
anims/Attack2 = SubResource( 110 )
anims/Die = SubResource( 134 )

[node name="LifeTimeTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="KsanteQImpactTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="PlayerNearArea" to="." method="_on_PlayerNearArea_body_entered"]
[connection signal="body_exited" from="PlayerNearArea" to="." method="_on_PlayerNearArea_body_exited"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
[connection signal="timeout" from="HitWallTimer" to="." method="_on_HitWallTimer_timeout"]
[connection signal="body_entered" from="EnemyInRangeForAttack" to="." method="_on_EnemyInRangeForAttack_body_entered"]
[connection signal="body_exited" from="EnemyInRangeForAttack" to="." method="_on_EnemyInRangeForAttack_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="LifeTimeTimer" to="." method="_on_LifeTimeTimer_timeout"]
[connection signal="timeout" from="KsanteQImpactTimer" to="." method="_on_KsanteQImpactTimer_timeout"]
